src/test/ui/impossible_range.stderr
error[E0586]: inclusive range with no end
  --> $DIR/impossible_range.rs:8:8
   |
LL |     ..=;
   |        ^
   |
   = help: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error[E0586]: inclusive range with no end
  --> $DIR/impossible_range.rs:15:9
   |
LL |     0..=;
   |         ^
   |
   = help: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0586`.
